@@ -381,12 +381,6 @@ public class IGCReaderWriter {
 
 				reader.close();
 				reader = null;
-
-				if (GDE.IS_WINDOWS && isGsentence && GDE.BIT_MODE.equals("32") && dllID.equalsIgnoreCase("XTT")) {
-					if (IGCDLL.loadIgcDll(dllID)) {
-						System.out.println("verification = " + IGCDLL.validateLog(filePath));
-					}
-				}
 			}
 		}
 		catch (FileNotFoundException e) {
